Added envar (version 1 reversed)

--- a/templates/elkarbackup/0/docker-compose.yml
+++ b/templates/elkarbackup/0/docker-compose.yml
@@ -2,6 +2,8 @@ elkarbackup:
   image: elkarbackup/elkarbackup
   links:
     - db:mysql
+  environment:
+    MYSQL_ROOT_PASSWORD: changeme
   ports:
     - ${public_port}:80
 
