--- a/templates/elkarbackup/config.yml
+++ b/templates/elkarbackup/config.yml
@@ -3,3 +3,6 @@ description: |
   Open source backup solution for your network
 version: v0.1
 category: Security
+maintainer: Xabi Ezpeleta <xezpeleta@gmail.com>
+license: New-BSD
+projectURL: http://www.elkarbackup.org
