Added default db_host

--- a/templates/elkarbackup/1/docker-compose.yml
+++ b/templates/elkarbackup/1/docker-compose.yml
@@ -3,6 +3,7 @@ elkarbackup:
   links:
     - db:mysql
   environment:
+    EB_DB_HOST: db
     MYSQL_ROOT_PASSWORD: ${mysql_root_password}
     DISABLE_CRON: ${disable_cron}
   ports:
