Updated config version

--- a/templates/elkarbackup/config.yml
+++ b/templates/elkarbackup/config.yml
@@ -1,8 +1,8 @@
 name: Elkarbackup
 description: |
   Open source backup solution for your network
-version: v0.1
+version: v0.2
 category: Security
 maintainer: Xabi Ezpeleta <xezpeleta@gmail.com>
 license: New-BSD
-projectURL: http://www.elkarbackup.org
+projectURL: https://www.elkarbackup.org
