--- a/templates/elkarbackup/2/docker-compose.yml
+++ b/templates/elkarbackup/2/docker-compose.yml
@@ -5,7 +5,9 @@ services:
     image: elkarbackup/elkarbackup:1.3.1-apache
     environment:
       SYMFONY__DATABASE__PASSWORD: ${mysql_root_password}
-      EB_CRON: ${cron_enabled}
+    {{- if eq .Values.cron_enabled "true" }}
+      EB_CRON: "enabled"
+    {{- end }}
       TZ: ${timezone}
     volumes:
     - backups:/app/backups
