--- a/templates/elkarbackup/2/rancher-compose.yml
+++ b/templates/elkarbackup/2/rancher-compose.yml
@@ -43,3 +43,28 @@ catalog:
         - rancher-nfs
         - rancher-efs
         - rancher-ebs
+services:
+  elkarbackup:
+    scale: 1
+    retain_ip: true
+    health_check:
+      port: 80
+      interval: 5000
+      unhealthy_threshold: 3
+      initializing_timeout: 60000
+      request_line: 'GET /login HTTP/1.0'
+      healthy_threshold: 2
+      response_timeout: 5000 
+      reinitializing_timeout: 60000
+  db:
+    scale: 1
+    retain_ip: 1
+    health_check:
+      healthy_threshold: 2
+      response_timeout: 2000
+      port: 3360
+      unhealthy_threshold: 3
+      initializing_timeout: 60000
+      interval: 2000
+      strategy: recreate
+      reinitializing_timeout: 60000
